<resources>
    <string name="app_name">FayTown FoodTrucks</string>
    <string name="title_activity_maps">Map</string>
    <string name="foodtrucks_url">http://csce.uark.edu/~dmherrin/foodtrucklocation.txt</string>
    <string name="backButton">Back</string>
    <string name="menu">Menu:</string>
    <string name="yelp_page">Yelp/Zomato Page:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="truck_address">Address:</string>
    <string name="mark_as_favorite">Mark As Favorite</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="find">Find A FoodTruck</string>
</resources>
